# tricks

./: .gitignore  README.md
3DReconstruction_Learn/: README.md
3DReconstruction_Learn/logs/: 3DReconstruction.md
C++/ChernoCpp/: CMakeLists.txt
C++/ChernoCpp/36_init_constructor/: example.cpp
C++/ChernoCpp/43_object_life/: CMakeLists.txt  objectLife.cpp
C++/link_lib/: README.md
C++/pybind/: README.md
C++/pybind/examplePybind/: CMakeLists.txt  examplePybind.py
C++/pybind/examplePybind/inc/: numeric.h  vectorTest.h
C++/pybind/examplePybind/src/: main.cpp  numeric.cpp  vectorTest.cpp
ComputeNormal/: README.md  VisualizeN_demon.m  globals.m  rngSeed.mat  run.sh  setup.m
ComputeNormal/matlab-code/: generate_normal_gt_demon.m
ComputeNormal/normal-to-depth/: 6_est_depth.npy  6_gt_depth.npy  6_normal.npy  Normal2Depth.py  intrinsic.npy
ComputeNormal/normalComputation/: bfilter2.m  computeNormalsDSPre.m  par_load.m  saveNormals.m  visualizeNormal.m
ComputeNormal/pytorch-code/: ComputeNormal.py  depth.npy  normal.npy
Digital_Geometry_Processing/: README.md
Digital_Geometry_Processing/Adjacency/: Adjacency.cpp  README.md
Digital_Geometry_Processing/Angle/: README.md  angle.cpp
Digital_Geometry_Processing/Area/: README.md  area.app
Digital_Geometry_Processing/Curvature/: Gaussian_Curvature.cpp  README.md
Digital_Geometry_Processing/K-ring/: README.md  getKRing.cpp
Digital_Geometry_Processing/Normal/: README.md  normal.cpp
Digital_Geometry_Processing/Reference_coordinate/: README.md  reference_coordinate.cpp
Digital_Geometry_Processing/Rotation/: README.md  rotation.py
Digital_Geometry_Processing/cotmatrix/: README.md  cotmatrix.cpp
Environment_Build/: README.md
Environment_Build/Boost/: README.md
Environment_Build/Boost/code/PyBoostTest/: CMakeLists.txt  Num.cpp  Num.h  PyBoostTest.py  PyBoostTest.pyd
Environment_Build/Boost/code/PyBoostTest/src/: wrapper.cpp
GAMES101_Assignment/: README.md
GAMES101_Assignment/Assignment1/: README.md
GAMES101_Assignment/Assignment3/: README.md
Homograph_Warping/: README.md  homo_warping.py
LearnMath/Quanternion/: README.md
LearnOpenGL/: CMakeLists.txt  README.md
LearnOpenGL/include/glad/: glad.h
LearnOpenGL/include/tools/: Camera.h  shader_s.h
LearnOpenGL/lib/: OpenGL32.Lib  glfw3.lib
LearnOpenGL/src/: glad.c  main.cpp
LearnOpenGL/src/00_Mini_Render/: 00_Mini_Render.cpp
LearnOpenGL/src/00_Mini_Render/Shaders/: frag.glsl  vert.glsl
LearnOpenGL/src/01_Hello_Window/: 01_Hello_Window.cpp  CMakeLists.txt
LearnOpenGL/src/02_Hello_Triangle/: 02_Hello_Triangle.cpp  CMakeLists.txt
LearnOpenGL/src/03_Shaders/: 03_Shaders.cpp
LearnOpenGL/src/03_Shaders/Shader/: frag.glsl  vert.glsl
LearnOpenGL/src/04_Textures/: 04_Textures.cpp
LearnOpenGL/src/04_Textures/Shader/: frag.glsl  vert.glsl
LearnOpenGL/src/05_Transformations/: 05_Transformations.cpp
LearnOpenGL/src/05_Transformations/Shader/: frag.glsl  vert.glsl
LearnOpenGL/src/06_Coordinate_Systems/: 06_Coordinate_Systems.cpp
LearnOpenGL/src/06_Coordinate_Systems/Shader/: frag.glsl  vert.glsl
LearnOpenGL/src/07_Camera/: 07_Camera.cpp
LearnOpenGL/src/08_Colors/: 08_Colors.cpp
LearnOpenGL/src/09_Basic_Lighting/: 09_Basic_Lighting.cpp
LearnOpenGL/src/09_Basic_Lighting/Shaders/: frag.glsl  lighting_frag.glsl  vert.glsl
LearnOpenGL/src/10_Materials/: 10_Materials.cpp
LearnOpenGL/src/10_Materials/Shaders/: frag.glsl
LearnOpenGL/src/11_Lighting_maps/: 11_Lighting_maps.cpp
LearnOpenGL/src/11_Lighting_maps/Shaders/: frag.glsl  vert.glsl
LearnOpenGL/src/13_Multiple_lights/: 13_Multiple_lights.cpp  CMakeLists.txt
LearnOpenGL/src/13_Multiple_lights/Shaders/: frag.glsl
LearnOpenGL/src/15_Depth_testing/: 15_Depth_testing.cpp
LearnOpenGL/src/15_Depth_testing/Shaders/: frag.glsl
LearnOpenGL/src/16_discard/: 16_discard.cpp
LearnOpenGL/src/16_discard/Shaders/: frag.glsl
LearnOpenGL/src/17_Blending/: 17_Blending.cpp
LearnOpenGL/src/17_Blending/Shaders/: vert.glsl
LearnOpenGL/src/18_Face_Culling/: 18_Face_Culling.cpp
LearnOpenGL/src/18_Face_Culling/Shaders/: frag.glsl
LearnOpenGL/src/19_FrameBuffer/: 19_FrameBuffer.cpp
LearnOpenGL/src/19_FrameBuffer/Shaders/: screen_frag.glsl
LearnOpenGL/src/20_Cubemaps/: 20_Cubemaps.cpp
LearnOpenGL/src/20_Cubemaps/Shaders/: frag.glsl  skyBoxFrag.glsl  vert.glsl
LearnOpenGL/src/21_Anti_Aliasing/: 21_Anti_Aliasing.cpp
LearnOpenGL/src/21_Anti_Aliasing/Shaders/: frag.glsl
LearnOpenGL/src/99_Depth_Peeling/: 99_Depth_Peeling.cpp
LearnOpenGL/src/99_Depth_Peeling/Shaders/: frag.glsl  screen_frag.glsl
Network_Module/CBAM/: README.md
PlaneRCNN/: README.md
PointMVSNet/: README.md
Render/: 渲染多视角模型.md
Template/: README.md
codeRead/: README.md
compute_area/: README.md  compute_area.md  compute_area.py
dockerBuild/: Dockerfile  Dockerfile_conda  README.md
draw_BBox/: draw.py
git/: README.md  use_git.md
hexo/: README.md
initialization/: README.md  initialization.py
lr_scheduler/: README.md
pointCloud/: 00000000.ply  README.md  frame_to_world.py  generate_pointcloud.py  intrinsic_0000000_seg.txt  pointCloud.py  pointCloudv2.py
projection/: 00000000_cam.txt  README.md  depth_map_0000.pfm  project.py  warp.py
training_script/: README.md
utils/: README.md  distance.py  freeze_fineturn.py
(+88 files in other folders)
